<resources>
    <string name="app_name">PdmChat</string>
    <string name="remetente">From</string>
    <string name="mensagem">Message</string>
    <string name="createdAt">date time</string>
    <string name="receiver_id">Receiver ID</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="menu">Menu</string>
    <string name="exit">exit</string>
    <string name="send_message">New Message</string>
    <string name="logout">Logout</string>
</resources>