<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/remetenteTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/remetente" />

    <TextView
        android:id="@+id/mensagemTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/mensagem" />

    <TextView
        android:id="@+id/created_atTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createdAt" />
</LinearLayout>